--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Inter:wght@400;700&family=Kanit&family=Open+Sans:wght@400;700&family=Tinos&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Inter:wght@400;700&family=Kanit&family=Montserrat:wght@500&family=Open+Sans:ital,wght@0,400;0,700;1,400&family=Tinos&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -290,5 +294,103 @@
         </div>
       </section>
 
+      <section class="review">
+        <div class="review__container">
+          <div class="review__body">
+    <div class="review__slider swiper">
+      <div class="review__wrapper swiper-wrapper">
+
+        <div class="review__slider-slide swiper-slide">
+          <div class="review__texts-slider">
+            <p class="review__text-01">
+              Я надолго запомню мой День рождения, проведённый в этом ресторане! 
+              Кусочек родной <br> Армении!!! Отдельное спасибо за комплепент в виде фруктовой тарелки. 
+              Будем <br> рекомендовать этот ресторан своим друзьям и родственникам также за рубежом, <br>
+              путешествующих в Санкт-Петербург!!!
+            </p>
+          </div>
+          <div class="review___image-slider">
+            <img class="review___image-01" src="./img/review__img-01.png" alt="">
+          </div>
+          <div class="review__texts-slider">
+            <p class="review__text-02">
+              Посетитель
+            </p>
+          </div>
+          <div class="review__texts-slider">
+            <p class="review__text-03">
+              Николай
+            </p>
+          </div>
+        </div>
+
+        <div class="review__slider-slide swiper-slide">
+          <div class="review__texts-slider">
+            <p class="review__text-01">
+              Я надолго запомню мой День рождения, проведённый в этом ресторане! 
+              Кусочек родной <br> Армении!!! Отдельное спасибо за комплепент в виде фруктовой тарелки. 
+              Будем <br> рекомендовать этот ресторан своим друзьям и родственникам также за рубежом, <br>
+              путешествующих в Санкт-Петербург!!!
+            </p>
+          </div>
+          <div class="review___image-slider">
+            <img class="review___image-01" src="./img/review__img-01.png" alt="">
+          </div>
+          <div class="review__texts-slider">
+            <p class="review__text-02">
+              Посетитель
+            </p>
+          </div>
+          <div class="review__texts-slider">
+            <p class="review__text-03">
+              Николай
+            </p>
+          </div>
+        </div>
+
+        <div class="review__slider-slide swiper-slide">
+          <div class="review__texts-slider">
+            <p class="review__text-01">
+              Я надолго запомню мой День рождения, проведённый в этом ресторане! 
+              Кусочек родной <br> Армении!!! Отдельное спасибо за комплепент в виде фруктовой тарелки. 
+              Будем <br> рекомендовать этот ресторан своим друзьям и родственникам также за рубежом, <br>
+              путешествующих в Санкт-Петербург!!!
+            </p>
+          </div>
+          <div class="review___image-slider">
+            <img class="review___image-01" src="./img/review__img-01.png" alt="">
+          </div>
+          <div class="review__texts-slider">
+            <p class="review__text-02">
+              Посетитель
+            </p>
+          </div>
+          <div class="review__texts-slider">
+            <p class="review__text-03">
+              Николай
+            </p>
+          </div>
+        </div>
+        
+
+      </div>
+
+        <div class="pagination__style swiper-pagination"></div>
+    </div>
+
+          </div>
+        </div>
+      </section>
+
+
+
+
+
+
+
+
+
+      <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+      <script src="./script.js"></script>
   </body>
 </html>
