--- a/index.html
+++ b/index.html
@@ -382,6 +382,44 @@
         </div>
       </section>
 
+      <section class="galery">
+        <div class="galery__container">
+          <div class="galery__body">
+
+            <div class="galery__titles">
+              <p class="galery__title-01">
+                Галерея <span class="galery__text-color">Блюд</span>
+              </p>
+            </div>
+
+            <div class="galery__all-images">
+            <div class="galery__left">
+              <div class="galery__images-01">
+                <img src="./img/galery__img-01.png" alt="" class="galery__img-01">
+                <div class="galery__two-images">
+                  <img src="./img/galery__img-02.png" alt="" class="galery__img-02">
+                  <img src="./img/galery__img-03.png" alt="" class="galery__img-03">
+                </div>
+              </div>
+            </div>
+
+            <div class="galery__right">
+              <div class="galery__images-02">
+                <div class="galery__two-images-02">
+                  <img src="./img/galery__img-02.png" alt="" class="galery__img-02">
+                  <img src="./img/galery__img-03.png" alt="" class="galery__img-03">
+                </div>
+                <img src="./img/galery__img-01.png" alt="" class="galery__img-04">
+              </div>
+            </div>
+            </div>
+
+
+          </div>
+        </div>
+      </section>
+
+      
 
 
 
