--- a/index.html
+++ b/index.html
@@ -419,6 +419,26 @@
         </div>
       </section>
 
+      <section class="kitchener">
+        <div class="kitchener__container">
+          <div class="kitchener__body">
+
+            <div class="kitchener__title">
+              <p class="kitchener__title-tetx-01">
+                Наши <span class="kitchener__span-color">Повара</span>
+              </p>
+            </div>
+
+            <div class="kitchener__images">
+              <img src="./img/cooker-01.png" alt="" class="kitchener__img-01">
+              <img src="./img/cooker-02.png" alt="" class="kitchener__img-01">
+              <img src="./img/cooker-03.png" alt="" class="kitchener__img-01">
+            </div>
+
+          </div>
+        </div>
+      </section>
+
       
 
 
